Add endpoints  PUT, DELETE and POST in Product Classes
